# Test executables
add_executable(pressure_test pressure_test.cpp)
add_executable(always_insert always_insert.cpp)
add_executable(test_existing_tree test_existing_tree.cpp)
add_executable(parse_commands parse_commands.cpp)
add_executable(gentest gentest.cpp)
add_executable(test_bf test_bf.cpp)
add_executable(rb_tree rb_tree.cpp)
